deploy/retrieveUnpackaged/objects/Rackspace_Contacts__c.object
<CustomObject>
    <description>Account Contact Roles   - Used for the Account  Contact Roles</description>
    <fields>
        <fullName>Account_Roles_Production_Id__c</fullName>
        <description>Used for CI integration</description>
        <externalId>true</externalId>
        <inlineHelpText>Used for CI integration</inlineHelpText>
        <label>Account Roles Production Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this to have a contact role removed from the account.</description>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to send the NPS Survey to the decision maker of the account.  The contact does not have to be available for access to the account.  Be sure to select NPS Contact ONLY as the drop down role column if they should not have access to the account.</inlineHelpText>
        <label>NPS Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_INT_Business_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to send the NPS Survey to the business contact of the account. The contact does not have to be available for access to the account. Be sure to select NPS Contact ONLY as the drop down role column if they should not have access to the account.</inlineHelpText>
        <label>NPS INT Business Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_MGD_Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to send the NPS Survey to the billing contact of the account. The contact does not have to be available for access to the account. Be sure to select NPS Contact ONLY as the drop down role column if they should not have access to the account.</inlineHelpText>
        <label>NPS MGD Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes the contacts that will receive the NPS Survey from EMEA.</description>
        <inlineHelpText>Denotes the contacts that will receive the NPS Survey from EMEA.</inlineHelpText>
        <label>EMEA NPS Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Technical_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to send the NPS Survey to the technical contact of the account. The contact doesn&apos;t have to be available for access to the account. Be sure to select NPS Contact ONLY as the drop down role column if they should not have access to the account.</inlineHelpText>
        <label>NPS Technical Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <formula>If(NPS_Decision_Maker__c, 1, 0) + if( NPS_INT_Business_Contact__c, 1, 0) + if( NPS_MGD_Billing_Contact__c, 1, 0) + if( NPS_Technical_Contact__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to denote the primary decision maker on the account.</description>
        <inlineHelpText>Used to denote the primary decision maker on the account.</inlineHelpText>
        <label>Primary Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rackspace_Account__c</fullName>
        <label>Rackspace Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Rackspace</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rackspace_Contact__c</fullName>
        <description>Lookup for the contact that needs a role with this company.</description>
        <inlineHelpText>Used to lookup the contact to associate to the company.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Contact Roles</relationshipLabel>
        <relationshipName>Rackspace</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPS Contact ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Notify__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ticket Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>syscontactid__c</fullName>
        <description>Jim Salinas requested unique contraint.</description>
        <label>syscontactid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Contact Roles</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Rackspace Contacts Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_allow_one_primary_contact</fullName>
        <active>false</active>
        <description>Only allows one primary contact.</description>
        <errorConditionFormula>AND(Rackspace_Account__r.Primary_Count__c &gt;=1,  ISPICKVAL(Role__c, &apos;Primary Contact&apos;))</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>You can only have one Primary Contact on an account. Please edit or mark the existing Primary Contact for deletion.</errorMessage>
    </validationRules>
</CustomObject>